Account and Transaction entity classes done

--- a/onlineBanking/pom.xml
+++ b/onlineBanking/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.project.gladiator</groupId>
-	<artifactId>onlineBanking</artifactId>
+	<artifactId>OnlineBanking</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
