--- a/onlineBanking/.project
+++ b/onlineBanking/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OnlineBanking</name>
+	<name>onlineBanking</name>
 	<comment></comment>
 	<projects>
 	</projects>
