--- a/banking-frontend-angular/package.json
+++ b/banking-frontend-angular/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.1.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
