--- a/banking-frontend-angular/package.json
+++ b/banking-frontend-angular/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "bn-ng-idle": "^1.0.1",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.1.1",
     "rxjs": "~6.5.5",
