--- a/banking-frontend-angular/package.json
+++ b/banking-frontend-angular/package.json
@@ -22,6 +22,7 @@
     "bn-ng-idle": "^1.0.1",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.1.1",
+    "ngx-spinner": "^10.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
